tests/golden/type_errors/map_clear_non_map.err
Type error at 1:8: clear expects map as first argument, got number
  clear(1);
         ^
